my-apps/privacy/proxitok/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: proxitok-route
  namespace: proxitok
spec:
  parentRefs:
    - name: external
      namespace: gateway
  hostnames:
    - "proxitok.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: proxitok-web
          port: 8080
